<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/brightness_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:text="@string/brightness_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <SeekBar
        android:id="@+id/brightness_bar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="380dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressTint="#4CAF50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brightness_text" />

    <ToggleButton
        android:id="@+id/on_off"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:saveEnabled="true"
        android:text="@string/togglebutton_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brightness_bar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/light_config_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/light_options_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/on_off"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/color_spinner"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/light_configs"
        app:layout_constraintTop_toTopOf="@+id/light_configs"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/light_configs"
        android:layout_width="180dp"
        android:layout_height="494dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_config_text"
        app:layout_constraintVertical_bias="0.0">


        <RadioButton
            android:id="@+id/solid_color"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_color_text" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/rainbow"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_rainbow_text" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>



